# tap-gladly

./: LICENSE.md  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_gladly/: __init__.py  client.py  streams.py  tap.py
tap_gladly/schemas/: conversation.json  export_agents.json  export_conversation-all_types.json  export_conversation-chat_message.json  export_conversation-conversation_note.json  export_conversation-conversation_status_change.json  export_conversation-customer_activity.json  export_conversation-email.json  export_conversation-facebook_message.json  export_conversation-phone_call.json  export_conversation-sms.json  export_conversation-topic_change.json  export_conversation-voicemail.json  export_conversation-whatsapp.json  export_conversation.json  export_customers.json  export_jobs.json  export_topics.json  inbox.json  report_conversation_export.json  reports__conversation_timestamps_report.json
tap_gladly/tests/: __init__.py  test_core.py  test_streams.py
test_config/: config__export_conversation-chat_message.json  config__export_conversation-topic_change.json  config_start_date.json
